Closed
Bug 743444
Opened 13 years ago
Closed 13 years ago
Lighting Filter clipped when kernelUnitLength specified
Categories
(Core :: SVG, defect)
Tracking
()
RESOLVED
FIXED
mozilla14
People
(Reporter: bill.seddon, Assigned: longsonr)
Details
Attachments
(2 files)
115.60 KB,
image/svg+xml
|
Details | |
5.27 KB,
patch
|
roc
:
review+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:11.0) Gecko/20100101 Firefox/11.0
Build ID: 20120312181643
Steps to reproduce:
I created an SVG document with three paths in three layers within a group: a drop shadow, the original text and an emboss layer with specular highlights.
I opened the file using FF 11 on Windows 7 (x64). I opened it using both the file: and http: protocols.
Actual results:
The document renders correctly using Batik or in Chrome 17 but in FF 11 the emboss layer is not completely rendered exposing the text layer incorrectly. The problem is hard to miss.
Expected results:
Should have been rendered correctly.
Assignee | ||
Comment 1•13 years ago
|
||
Removing the kernelUnitLength attribute makes it render the way you want I think.
Assignee | ||
Updated•13 years ago
|
Component: Untriaged → SVG
Product: Firefox → Core
QA Contact: untriaged → general
Summary: SVG document does not render correctly → Lighting Filter clipped when kernelUnitLength specified
Version: 11 Branch → Trunk
Reporter | ||
Comment 2•13 years ago
|
||
Thanks for the prompt response> Yes, that works.
Assignee | ||
Comment 3•13 years ago
|
||
Assignee: nobody → longsonr
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Attachment #613953 -
Flags: review?(roc)
Attachment #613953 -
Flags: review?(roc) → review+
Assignee | ||
Comment 4•13 years ago
|
||
Flags: in-testsuite+
Target Milestone: --- → mozilla14
Comment 5•13 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•