Bug 743444 - Lighting Filter clipped when kernelUnitLength specified. r=roc